Closed
Bug 1496491
Opened 6 years ago
Closed 6 years ago
Close tab button doesn't work after tab bar animates
Categories
(Core :: Web Painting, defect, P2)
Tracking
()
VERIFIED
FIXED
mozilla69
Tracking | Status | |
---|---|---|
firefox-esr60 | --- | unaffected |
firefox62 | --- | unaffected |
firefox63 | --- | unaffected |
firefox64 | + | disabled |
firefox67 | --- | disabled |
firefox68 | --- | disabled |
firefox69 | --- | verified |
People
(Reporter: agashlin, Assigned: mikokm)
References
Details
(Keywords: regression)
Attachments
(3 files)
Steps to reproduce:
1. Create enough tabs (or make the window narrow enough) that early tabs scroll off the left
2. Click the rightmost tab's close button, another tab will scroll in under the cursor and its close button will appear selected with the mouseover
3. Click the close button
Expected result:
Tab closes
Observed result:
Close button deselects, nothing else happens. It appears to work as just a click on the titlebar. Moving the mouse off of the close button and back causes the highlight to flicker but the button still doesn't work. Selecting another tab seems to fix it.
Seen on Windows 10. It only seems to happen when the tab bar scrolls following a tab close.
mozregression gave:
Last good revision: ef315578d7484d702ed83cf4f9d3d3af20515ad7
First bad revision: 19165a49129512561ee268e671c9e389b566b489
Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=ef315578d7484d702ed83cf4f9d3d3af20515ad7&tochange=19165a49129512561ee268e671c9e389b566b489
which points at bug 1491400.
![]() |
||
Updated•6 years ago
|
status-firefox62:
--- → unaffected
status-firefox63:
--- → unaffected
status-firefox-esr60:
--- → unaffected
Keywords: regression
Comment 1•6 years ago
|
||
(In reply to Adam Gashlin [:agashlin] from comment #0)
> mozregression gave:
>
> Last good revision: ef315578d7484d702ed83cf4f9d3d3af20515ad7
> First bad revision: 19165a49129512561ee268e671c9e389b566b489
> Pushlog:
> https://hg.mozilla.org/integration/autoland/
> pushloghtml?fromchange=ef315578d7484d702ed83cf4f9d3d3af20515ad7&tochange=1916
> 5a49129512561ee268e671c9e389b566b489
>
> which points at bug 1491400.
This doesn't seem to make any sense and is likely wrong.
No longer blocks: 1491400
Component: Themes → Untriaged
Keywords: regressionwindow-wanted
Product: Toolkit → Firefox
QA Contact: dao+bmo
Updated•6 years ago
|
QA Contact: dao+bmo → past
![]() |
||
Comment 2•6 years ago
|
||
[Tracking Requested - why for this release]:
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=abd419a57735832ac235c23716225c2b38abd759&tochange=260007b95d6791a665a7ce2ba45664182b119609
Regressed by:
260007b95d67 Miko Mynttinen — Bug 1494124 - Allow only one rect per frame in WeakFrameRegion r=mattwoodrow
@:miko,
Your patch causes the ux regression, can you please look into this?
Blocks: 1494124
tracking-firefox64:
--- → ?
Component: Untriaged → Layout: Web Painting
Flags: needinfo?(mikokm)
Keywords: regressionwindow-wanted
Product: Firefox → Core
QA Contact: past → matt.woodrow
Assignee | ||
Updated•6 years ago
|
Assignee: nobody → mikokm
Status: NEW → ASSIGNED
Flags: needinfo?(mikokm)
Priority: -- → P1
Updated•6 years ago
|
Updated•6 years ago
|
QA Contact: matt.woodrow
Assignee | ||
Updated•6 years ago
|
Keywords: leave-open
Assignee | ||
Comment 4•6 years ago
|
||
Assignee | ||
Comment 5•6 years ago
|
||
I have not looked into this in more detail yet, but this bug is likely caused by a Windows specific frame invalidation issue during tab animation and/or hovering.
The patch is a temporary workaround to fix this for 64.
Pushed by mikokm@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/a51437b15d79
Disable parent process RDL r=mattwoodrow
Comment 7•6 years ago
|
||
bugherder |
Updated•6 years ago
|
Updated•6 years ago
|
Priority: P1 → P2
Assignee | ||
Updated•6 years ago
|
Assignee: mikokm → nobody
Status: ASSIGNED → NEW
Assignee | ||
Updated•6 years ago
|
Assignee: nobody → mikokm
Status: NEW → ASSIGNED
Assignee | ||
Comment 8•6 years ago
|
||
Assignee | ||
Updated•6 years ago
|
Keywords: leave-open
Pushed by mikokm@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/3d2772251e06
Check for modified ancestors when updating WeakFrameRegion r=mattwoodrow
Comment 10•6 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
status-firefox69:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla69
Updated•6 years ago
|
status-firefox67:
--- → disabled
status-firefox68:
--- → disabled
Updated•6 years ago
|
Flags: qe-verify+
Comment 11•6 years ago
|
||
Hello!
Reproduced the issue using Firefox 64.0a1 (20181004224156) on Windows 10x64.
The issue is verified using Firefox 69.0b7 (20190722201635) on Windows 10x64, macOS 10.14 and Ubuntu 18.04.
You need to log in
before you can comment on or make changes to this bug.
Description
•