Bug 1496491 - Check for modified ancestors when updating WeakFrameRegion r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D32487

--HG--
extra : moz-landing-system : lando